Bug 462476 - When programming in golang an output window pops up with many error messages that hinders typing resulting in pressing the same key multiple times to get a character through (e.g. pressing { many times which generates errors msgs and missed keystrokes)
Summary: When programming in golang an output window pops up with many error messages ...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 21.12.3
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-01 03:42 UTC by Oma
Modified: 2023-01-02 07:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oma 2022-12-01 03:42:57 UTC
SUMMARY
***
When programming in golang an output window pops up with many error messages that hinders typing resulting in pressing the same key multiple times to get a character through (e.g. pressing { many times which generates errors msgs and missed keystrokes)
***


STEPS TO REPRODUCE
1. Install Kubuntu 22.04
2. Install Golang from repositories (ver 1.8.X at the time of writing)
3. start coding in go and the output console starts showing LSPServer errors. 

OBSERVED RESULT

Partial autocompletion happens but keystrokes get missed when these LSPserver errors start getting generated and slows things down.


EXPECTED RESULT

Auto completion or keywords/code structure (e.g. {} ) and so on. 

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma:  Linux 5.15.x / Plasma 5.24.7
(available in About System)
KDE Plasma Version: 5.24.7
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION

This may not help but I am very new to both KDE / Kudbuntu and Golang in general - I'm using everything almost as is out of the box. Below is an example of the most common error that pops-up for me. There are others but I could not capture them all. 
```
   2022/12/01 10:08:32 DocumentSymbols failed: invalid pos
   	URI=file:///home/tiny/go/src/cnv-chr-ren-file-extract-subtitle-spltup-file-denGO2riverNile-upload2ORG-Archive/dengo2rvrnile.go
   2022/12/01 10:08:59 DocumentSymbols failed: invalid pos
   	URI=file:///home/tiny/go/src/cnv-chr-ren-file-extract-subtitle-spltup-file-denGO2riverNile-upload2ORG-Archive/dengo2rvrnile.go
10:08:32 LSP Server Error go@/home/tiny
10:08:59 LSP Server Error go@/home/tiny
```
Comment 1 Waqar Ahmed 2022-12-13 19:51:27 UTC
A lot of this is fixed in the latest release. If you can, please upgrade to 22.12 and see if there are issues still.

Besides for the 'output' pane popping up, it can be configured in Settings - Behavior.
Comment 2 Bug Janitor Service 2022-12-30 13:26:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1052
Comment 3 Christoph Cullmann 2023-01-01 15:13:35 UTC
Git commit a77f106849c522cec1b1c9495b5d22f5afdd55f0 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 01/01/2023 at 14:38.
Pushed by cullmann into branch 'master'.

lsp: Downgrade window/logMessage to MessageType::Log

Some servers do a lot of logging and some of those log messages are Errors.
These errors are not meant to interrupt the user, they should just be
_logged_.

Some servers e.g., gopls is completely unusable with Kate without this

Related: https://github.com/golang/go/issues/33467

M  +17   -1    addons/lspclient/lspclientpluginview.cpp

https://invent.kde.org/utilities/kate/commit/a77f106849c522cec1b1c9495b5d22f5afdd55f0
Comment 4 Waqar Ahmed 2023-01-02 07:52:08 UTC
Git commit d8e96f06c2d251a5d92c66cf71d3b9d989814ba5 by Waqar Ahmed.
Committed on 02/01/2023 at 07:48.
Pushed by waqar into branch 'release/22.12'.

lsp: Downgrade window/logMessage to MessageType::Log

Some servers do a lot of logging and some of those log messages are Errors.
These errors are not meant to interrupt the user, they should just be
_logged_.

Some servers e.g., gopls is completely unusable with Kate without this

Related: https://github.com/golang/go/issues/33467
(cherry picked from commit a77f106849c522cec1b1c9495b5d22f5afdd55f0)

M  +17   -1    addons/lspclient/lspclientpluginview.cpp

https://invent.kde.org/utilities/kate/commit/d8e96f06c2d251a5d92c66cf71d3b9d989814ba5