lsp: Downgrade window/logMessage to MessageType::Log

Some servers do a lot of logging and some of those log messages are Errors.
These errors are not meant to interrupt the user, they should just be
_logged_.

Some servers e.g., gopls is completely unusable with Kate without this

Related: https://github.com/golang/go/issues/33467
BUG: 462476
(cherry picked from commit a77f106849c522cec1b1c9495b5d22f5afdd55f0)